[package]
name = "zkli"
version = "0.2.0"
edition = "2021"
description = "Cli around zookeeper"
readme = "README.md"
license = "WTFPL"
repository = "https://github.com/irevoire/zkli"
keywords = ["zookeeper", "cli"]
authors = ["Tamo <tamo@meilisearch.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.2"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
miette = { version = "5.10.0", features = ["fancy", "owo-colors"] }
zookeeper = "0.8.0"
